# srht-socio

./: .build.yml  .gitignore  LICENSE  README.md  gen-social.sh  main.py  pyproject.toml  requirements.txt  shell.nix
.github/: PULL_REQUEST_TEMPLATE.md  README.md
src/gesock/: cli.py  lib.py  model.py
src/socio/: __main__.py  lib.py
