[project]
name = "socio"
dynamic = ["version", "readme", "dependencies"]
authors = [
  { name = "Roger Steve Ruiz", email = "hi@rog.gr" },
]
description = "A CLI to generate text on an image for social media sharing using ImageMagick."
requires-python = ">=3.11"

classifiers = [
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://git.sr.ht/~rogeruiz/socio"

[tool.flit.sdist]
exclude = ["docs"]

[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[tool.setuptools.dynamic]
version = { attr = "socio.__version__" }
readme = { file = [ "README.md" ] }

[project.scripts]
socio = "socio.cli:main"
